Done first 3 methods of backend
