# doc/api.yaml
@@ -77,18 +77,19 @@ components:
       type: object
       properties:
         id:
-          description: ID of the message
-          type: integer
-          example: 1
-          minimum: 1
-          maximum: 2048 # Had to set a cap on the user ID
-        name:
-          description: Name of the user
+          description: ID of the user
           type: string
           pattern: '^.*?$'
           minLength: 3
           maxLength: 16
           example: Maria
+        displayName:
+          description: Name of the user
+          type: string
+          pattern: '^.*?$'
+          minLength: 3
+          maxLength: 32
+          example: FairyMaria
         biography:
           description: |
             Little biography of the user
@@ -121,7 +122,7 @@ components:
           type: integer
           example: 1
           minimum: 1
-          maximum: 1048576 # Could be lower or higher, had to set a maximum
+          maximum: 1048576 # Could be lower or higher, had to set a maximum
         sender:
           description: ID of the sender
           type: integer
@@ -351,9 +352,17 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/User"
+
+        '406':
+          description: |
+            The provided username is too long or too short
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
   
   /user/{user_id}/chats:
-    # GET = getMyConversations
+    # GET = getMyConversations
     parameters:
       - $ref: "#/components/parameters/user_id"
 
@@ -390,8 +399,8 @@ paths:
               schema:
                 $ref: "#/components/schemas/Chat"
   
-  /user/{user_id}/name:
-    # POST = setMyUserName
+  /user/{user_id}/id:
+    # POST = setMyUserName
     parameters:
       - $ref: "#/components/parameters/user_id"
 
@@ -410,7 +419,7 @@ paths:
               properties:
                 newUsername:
                   type: string
-                  description: New username
+                  description: New ID
                   pattern: '^.*?$'
                   minLength: 3
                   maxLength: 16
@@ -423,6 +432,44 @@ paths:
         "418":
           description: |
             The username wasn't changed due to an error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+
+  /user/{user_id}/name:
+    # POST = setMyUserName
+    parameters:
+      - $ref: "#/components/parameters/user_id"
+
+    post:
+      tags: [ "User operations", "Settings" ]
+      summary: Change the display name of the user
+      description: Changes the display name of the user specified by the ID in the path
+      operationId: setMyDisplayName
+      requestBody:
+        description: New display name
+        content:
+          application/json:
+            schema:
+              type: object
+              description: Object containing the new display name of the user
+              properties:
+                newDisplayName:
+                  type: string
+                  description: New display name
+                  pattern: '^.*?$'
+                  minLength: 3
+                  maxLength: 32
+                  example: FairyNewMaria
+        required: true
+      responses:
+        "204":
+          description: |
+            The display name has been changed successfully
+        "418":
+          description: |
+            The display name wasn't changed due to an error
           content:
             application/json:
               schema:
