# service/api/api-handler.go
@@ -15,9 +15,10 @@ func (rt *_router) Handler() http.Handler {
 
 	// WASAText APIs paths
 	rt.router.POST("/session", rt.doLogin)
+	rt.router.POST("/user/:user_id/id", rt.setMyUserName)
+	rt.router.POST("/user/:user_id/name", rt.setMyDisplayName)
 
 	/*rt.router.GET("/user/:user_id/chats", rt.getMyConversations)
-	rt.router.POST("/user/:user_id/name", rt.setMyUserName)
 	rt.router.POST("/user/:user_id/photo", rt.setMyPhoto)
 	rt.router.POST("/user/:user_id/bio", rt.setMyBio)
 
